# calm-focus

./: .babelrc  .eslintrc.js  .gitignore  .stylelintrc.js  README.md  index.html  main.js  package-lock.json  package.json  service-worker.js  tsconfig.json  vendors.js  workbox-468c4d03.js
config/: common-vars.js  jest.config.js  paths.js  webpack.common.js  webpack.dev.js  webpack.prod.js
public/: timer.worker.js
src/: App.css  App.test.tsx  App.tsx  PauseIcon.jsx  ResetIcon.jsx  context.tsx  custom.d.ts  fonts.d.ts  index.html  index.tsx  manifest.webmanifest  notification.ts  notifications.ts  service-worker.ts  sounds.ts  storage.ts  timeReducer.ts  timer-old.asd  timer.ts  types.ts  useLeaveConfirmation.tsx  web-workers.ts
src/components/: AnimatedCircle.tsx  Background.tsx  BackgroundOverlay.tsx  Box.tsx  Button-old.sx  Containers.tsx  Controls.tsx  Credits.tsx  DurationControls.tsx  DurationsConfig.tsx  ErrorBoundary.tsx  Hint.tsx  IconButton-old.sx  IconButton.tsx  InstallButton.tsx  Menu.tsx  MenuButton.tsx  NotificationsButton.tsx  NotificationsConfig.tsx  NumberInput.tsx  PictureCredits.tsx  PlayControls.tsx  ResetButton.tsx  SoundsConfig.tsx  StartButton.tsx  TickShine.tsx  Timer.tsx
src/context/: context.tsx  timeReducer.ts
src/helpers/: useInterval.ts  useLocalStorage.tsasd
src/hooks/: useKeyboardEvent.tsx  useLeaveConfirmation.tsx  useMinutesLeft.tsx  useNextPhase.tsx  usePhaseDuration.tsx  useProgress.tsx  useUpdateMinutes.tsx
src/icons/: DownloadIcon.tsx  NotificationIcon.tsx  NotificationIconInactive.tsx  PauseIcon.tsx  PlayIcon.tsx  ResetIcon.tsx
src/installation/: InstallButton.tsx
src/menu/: Menu.tsx  MenuButton.tsx
src/notification/: NotificationsConfig.tsx  notifications.ts
src/selectors/: useAutoPlayEnabled.tsx  useMinutesLeft.tsx  useNextPhase.tsx  usePhase.tsx  usePhaseDuration.tsx  (+3 more)
wasm/: Cargo.toml
wasm/pkg/: calm_focus_wasm.d.ts  calm_focus_wasm.js  calm_focus_wasm_bg.d.ts  calm_focus_wasm_bg.js  calm_focus_wasm_bg.wasm  index.d.ts  index_bg.js  index_bg.wasm  package.json
wasm/src/: lib.rs
www/: .eslintrc.js  .prettierrc.js  package-lock.json  package.json
(+51 files in other folders)
