[package]
name = "calm-focus-wasm"
version = "0.1.0"
authors = ["michaeladlfinger <4804412+mic-web@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.63"


# # The `console_error_panic_hook` crate provides better debugging of panics by
# # logging them with `console.error`. This is great for development, but requires
# # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# # code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }


[dependencies.web-sys]
version = "0.3.27"
features = [
  "console",
]

[features]
default = ["console_error_panic_hook"]
